--- a/Models/-VC/2023.06.18_LM-VC.md
+++ b/Models/-VC/2023.06.18_LM-VC.md
@@ -139,4 +139,66 @@ The MPLM and ELM, designed for coarse acoustic modeling, are introduced in the f
 
 \vspace{-13pt}
 
+### Masked Prefix Language Model
+
+\vspace{-3pt}
+
+As just mentioned, obtaining high speaker similarity and preserving linguistic content are essential goals of the zero-shot VC.
+
+However, accomplishing these goals in LM is challenging since the linguistic content may get lost as the network deepens during multi-layer modeling, and the lengthy speech input makes learning contextual information harder, which causes unnatural pronunciation.
+
+Furthermore, the semantic tokens still contain speaker-related information.
+
+And this inadequate decoupling causes the model to capture speaker timbre from both the target speaker speech and the source speech, thereby leading to low speaker similarity.
+
+Inspired by the advances in language modeling[^Du2022Glm], [^Dong2019Unified], we introduce a masked prefix language model (MPLM) to address this issue.
+
+As in Fig.~[fig:lmvc](#fig:lmvc) (b), MPLM is achieved by a multi-layer Transformer with two types of attention masks.
+
+To enhance the model's ability to learn contextual information and maintain the source content throughout the multi-layer modeling, MPLM employs a mask prediction strategy to restore masked tokens based on the surrounding context.
+
+Specifically, given a sequence of semantic tokens $\mathbf{s}=\{s_1,s_2,...s_{T_s}\}$, we randomly select several tokens as start indices at a ratio $r$, and spans of $l$ steps are masked by *[M]* token.
+
+After masking, MPLM takes the corrupted semantic tokens $\mathbf{s}_{mask}$ as input and recovers the masked tokens.
+
+The right part of Fig.~[fig:lmvc](#fig:lmvc) (b) illustrates the self-attention mask used in MPLM.
+
+For the semantic tokens, a bidirectional attention mask allows them to attend to each other, enabling MPLM to capture contextual information from both directions.
+
+The negative log-likelihood loss, computed over masked tokens, can be defined as:
+\vspace{-5pt}
+
+$$
+
+\mathcal{L}_{mask} = -\log{\prod_{t\in M}p_{\mathrm{MPLM}}(s_t|\mathbf{s}_{mask},t)}.
+\vspace{-5pt}
+
+$$
+
+For the acoustic generation, we employ the mask prediction strategy to make the model capture speaker timbre exclusively from the target speaker's speech, while extracting content from the corrupted semantic sequences.
+
+This strategy encourages the model to learn better contextual information and implicitly creates an information bottleneck in the semantic tokens to facilitate disentanglement.
+
+Moreover, during training, we do not explicitly use a speech clip as the acoustic prompt.
+
+Instead, MPLM leverages the previous acoustic sequence $\mathbf{a}^1_{1:t-1}$ as acoustic prompts to capture fine-grained speaker information and autoregressively generate $a^1_{t}$.
+
+In this process, we use unidirectional attention to achieve a left-to-right LM objective, where the acoustic token $a^1_t$ only attends to the previous sequence $\mathbf{a}^1_{1:t-1}$ and the semantic prefix $\mathbf{s}_{mask}$.
+
+The loss is
+\vspace{-7pt}
+
+$$
+
+\mathcal{L}_{ar} = -\log{\prod^{T_{a}-1}_{t = 0}p_{\mathrm{MPLM}}(a^1_t|\mathbf{a}^1_{1:t-1},\mathbf{s}_{mask},t)},
+\vspace{-5pt}
+
+$$
+
+where $T_a$ represents the sequence length of acoustic tokens.
+
+During training, the semantic recovery and acoustic generation are performed simultaneously as $\mathcal{L}_{mask}+\mathcal{L}_{ar}$.
+
+\vspace{-10pt}
+
 #
