--- a/Models/-VC/2023.06.18_LM-VC.md
+++ b/Models/-VC/2023.06.18_LM-VC.md
@@ -255,4 +255,15 @@ Note that shallow fusion is wildly used in ASR[^Cabrera2021Language] to improve 
 
 ### Experimental Setup
 
+#### Corpus
+
+A mixed dataset comprising 1,400 hours of LibriTTS[^Zen2019LibriTTS] and an internal dataset are used to train LM-VC and the SoundSteam codec[^Zeghidour2021SoundStream].
+
+To extract semantic tokens, we incorporate an open-source HuBERT\footnote{https://github.com/bshall/hubert}, which is trained on LibriSpeech[^Panayotov2015LibriSpeech].
+
+For zero-shot testing, a set of 500 testing pairs is selected from VCTK[^Veaux2016Cstr], CMU Arctic[^Kominek2004Cmu], and EMIME[^Wester2010Emime], 
+each with a source and target speaker utterance. 
+
+% For zero-shot testing, we chose 500 pairs from VCTK, CMU Arctic, and EMIME, each with a source and target speaker utterance.
+
 ##
