--- a/Models/-VC/2023.06.18_LM-VC.md
+++ b/Models/-VC/2023.06.18_LM-VC.md
@@ -266,4 +266,26 @@ each with a source and target speaker utterance.
 
 % For zero-shot testing, we chose 500 pairs from VCTK, CMU Arctic, and EMIME, each with a source and target speaker utterance.
 
+#### Implement details
+
+The SoundStream codec has 6 quantizer layers with a 1024 codebook size, representing a 24KHz waveform in 12.5ms frame length.
+
+The HuBERT compresses a 16KHz waveform into semantic tokens with 20ms frame length.
+
+For LM-VC, we employ the same decoder-only Transformers for MPLM, ELM, and PLM, with 12 layers, 16 attention heads, embedding dimension of 1024, feed-forward layer dimension of 4096, and dropout of 0.1, as in AudioLM[^Borsos2022AudioLM]. 
+
+During training, the training length is capped at 10s.
+
+MPLM and PLM are trained using 8 A100 80G GPUs with a batch size of 12 per GPU for 600K steps, while ELM has a batch size of 20.
+
+We use the AdamW optimizer with a learning rate of $5 \times 10^{-4}$ for MPLM and ELM and $1 \times 10^{-4}$ for PLM.
+
+Exponential decay updates the learning rate after each epoch, using a decay ratio 0.986.
+
+In MPLM, mask ratio $r$ ranges from $0.02$ to $0.04$, and span $l$ is set to 10.
+
+Window length $w$ of the ELM is set to 20, whose temporal granularity is 250ms.
+
+And the fusion weight $\lambda$ is set to 0.3.
+
 ##
