--- a/Models/-VC/2023.06.18_LM-VC.md
+++ b/Models/-VC/2023.06.18_LM-VC.md
@@ -288,4 +288,14 @@ Window length $w$ of the ELM is set to 20, whose temporal granularity is 250ms.
 
 And the fusion weight $\lambda$ is set to 0.3.
 
+#### Comparison systems
+
+Two representative VC systems are compared.
+
+We first implement a variant of AudioLM[^Borsos2022AudioLM] for VC (AuidoLM-VC), which uses semantic and first-layer acoustic tokens for coarse acoustic modeling.
+
+For a fair comparison, AudioLM-VC and LM-VC use the same PLM for fine acoustic modeling and both are trained on the same dataset.
+
+We also include a recent state-of-the-art VC system YourTTS[^Casanova2022YourTTS] with an open-source checkpoint as another comparison system.
+
 ##
