--- a/Models/-VC/2023.06.18_LM-VC.md
+++ b/Models/-VC/2023.06.18_LM-VC.md
@@ -356,4 +356,17 @@ NMOS and SMOS are calculated with 95$\%$ confidence intervals</a>
 
 <a id="fig:duration">Zero-shot performance under the different duration of speaker prompt</a>
 
+#### Validation of ELM
+
+To examine the efficacy of ELM in LM-VC, we implement multiple ELM with varying window lengths ($w=10,20,30,40,50$) and fusion weights ($\lambda=0.1,0.3,0.5,0.8,1$).
+
+The objective results in Fig.~[fig:windows](#fig:windows) show that LM-VC initially improves across all three aspects as the window length increases, but subsequently begins to decline.
+
+When considering different fusion weights, we observe subtle variations in the trend.
+
+Additionally, LM-VC achieves optimal performance under distinct fusion weights.
+
+Notably, the setup of ($w=20, \lambda=0.3$), which covers
+the common range of consonant-vowel syllables[^Steinschneider2013Representation], exhibits the best performance. 
+
 ##
