--- a/Models/-VC/2023.06.18_LM-VC.md
+++ b/Models/-VC/2023.06.18_LM-VC.md
@@ -369,4 +369,25 @@ Additionally, LM-VC achieves optimal performance under distinct fusion weights.
 Notably, the setup of ($w=20, \lambda=0.3$), which covers
 the common range of consonant-vowel syllables[^Steinschneider2013Representation], exhibits the best performance. 
 
-##
+#### Varying duration
+
+We further evaluate the zero-shot performance using different duration of target speaker utterances (1 $\sim$ 6s).
+
+As depicted in Fig.~[fig:duration](#fig:duration), the results are generally affected by the duration of the speaker speech.
+
+For the extreme cases, e.g., 1 $\sim$ 2s, the model exhibits poor performance in WER and ACC due to insufficient prompt information.
+
+But from 3 to 4s, the objective scores noticeably improve in terms of speech intelligibility and speaker accuracy.
+
+Beyond 5s, the P-QMOS and WER get worse.
+
+This can be attributed to the long prompt (9 $\sim$ 12s) composed of the source and speaker speech.
+
+During speech generation of LM-VC, the input length can reach 1170$\sim$1569 tokens, which is close to or exceeds the maximum training length (10s, 1300 tokens).
+
+With bigger GPU memory or specific-designed structures[^Dao2023FlashAttention-2], [^Yu2023Megabyte], this problem may be alleviated with the increased training length.
+
+Meanwhile, leveraging longer prompt more effectively[^Das2021Case-Based] is also a promising solution to break such length restriction.
+
+\vspace{-5pt}
+
