--- a/Models/-VC/2023.06.18_LM-VC.md
+++ b/Models/-VC/2023.06.18_LM-VC.md
@@ -391,3 +391,34 @@ Meanwhile, leveraging longer prompt more effectively[^Das2021Case-Based] is also
 
 \vspace{-5pt}
 
+## 4·Conclusions
+
+In this letter, we propose an LM-based zero-shot VC.
+
+Specifically, *LM-VC* adopts a two-stage framework.
+
+For coarse acoustic modeling, an MPLM is adopted in a mask prediction manner to enhance context learning and facilitate better disentanglement.
+
+Additionally, an ELM collaborates with MPLM to generate the target speech while ensuring speech generation stability.
+
+Finally, a non-autoregressive PLM reconstructs the fine acoustic tokens from the coarse acoustic tokens.
+
+Experiments demonstrate the superiority of LM-VC.
+
+The proposed LM-VC can easily **clone** desired speaker timbre with only 3 seconds of speech, simplifying any-to-any VC for applications like voice assistants, dubbing, and other speech generation scenarios.
+
+But it may cause potential risks in misuse, such as generating fake audio impersonating a specific speaker[^Yamagishi2021ASVspoof].
+
+We have to point out that the current zero-shot VC approaches mainly consider the accurate delivery of the speaker timbre while lacking the modeling of other important speaker characteristics, such as accent and prosody, which are critical for identifying specific speakers.
+
+Besides, the out-of-domain problem still exists.
+
+Even trained with 60k hours of speech, LM-VC cannot ensure high speaker similarity for utterances with accents, strong emotions, or unseen recording environments, a similar limitation also pointed out in VALL-E[^Wang2023Neural].
+
+\newpage
+
+\bibliographystyle{IEEEtran}
+\bibliography{ref.bib}
+
+\end{document}
+
