--- a/Models/-VC/2023.06.18_LM-VC.md
+++ b/Models/-VC/2023.06.18_LM-VC.md
@@ -422,3 +422,46 @@ Even trained with 60k hours of speech, LM-VC cannot ensure high speaker similari
 
 \end{document}
 
+## References
+
+[^Qian2019AutoVC]: {AutoVC}: Zero-Shot Voice Style Transfer With Only Autoencoder Loss. International Conference on Machine Learning (ICML) 2019.
+[^Qian2020Unsupervised]: Unsupervised Speech Decomposition via Triple Information Bottleneck. International Conference on Machine Learning (ICML) 2020.
+[^Gu2021MediumVC]: {MediumVC}: Any-to-Any Voice Conversion Using Synthetic Specific-Speaker Speeches as Intermedium Features. Arxiv.
+[^Sun2016Phonetic]: {Phonetic Posteriorgrams for Many-to-One Voice Conversion Without Parallel Data Training}. International Conference on Multimedia and Expo (ICME) 2016.
+[^Choi2021Neural]: Neural Analysis and Synthesis: Reconstructing Speech From Self-Supervised Representations. Neural Information Processing Systems(NeurIPS) 2021.
+[^Lin2021FragmentVC]: {FragmentVC}: Any-to-Any Voice Conversion by End-to-End Extracting and Fusing Fine-Grained Voice Fragments With Attention. International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2021.
+[^Yin2021Retriever]: Retriever: Learning Content-Style Representation as a Token-Level Bipartite Graph. International Conference on Learning Representations (ICLR) 2021.
+[^Maimon2022Speaking]: Speaking Style Conversion With Discrete Self-Supervised Units. Arxiv.
+[^Chou2019One-Shot]: One-Shot Voice Conversion by Separating Speaker and Content Representations With Instance Normalization. International Speech Communication Association (Interspeech) 2019.
+[^Wang2023Multi-Level]: Multi-Level Temporal-Channel Speaker Retrieval for Robust Zero-Shot Voice Conversion. Arxiv.
+[^Wang2021Vqmivc]: {VQMIVC}: Vector Quantization and Mutual Information-Based Unsupervised Speech Representation Disentanglement for One-Shot Voice Conversion. International Speech Communication Association (Interspeech) 2021.
+[^Wang2021Adversarially]: Adversarially Learning Disentangled Speech Representations for Robust Multi-Factor Voice Conversion. Arxiv.
+[^Tang2022Avqvc]: {AVQVC}: One-Shot Voice Conversion by Vector Quantization With Applying Contrastive Learning. Conference on Acoustics, Speech and Signal Processing (ICASSP) 2022.
+[^Ebbers2021Contrastive]: Contrastive Predictive Coding Supported Factorized Variational Autoencoder for Unsupervised Learning of Disentangled Speech Representations. International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2021.
+[^Borsos2022AudioLM]: {AudioLM}: A Language Modeling Approach to Audio Generation. Arxiv.
+[^Agostinelli2023MusicLM]: {MusicLM}: Generating Music From Text. Arxiv.
+[^Wang2023Neural]: Neural Codec Language Models Are Zero-Shot Text to Speech Synthesizers. Arxiv.
+[^Kharitonov2023Speak,]: {Speak, Read and Prompt}: High-Fidelity Text-to-Speech With Minimal Supervision. ArXiv.
+[^Hsu2021HuBERT]: {HuBERT}: Self-Supervised Speech Representation Learning by Masked Prediction of Hidden Units. Transactions on Audio, Speech, and Language Processing 2021.
+[^Liu2021Swin]: {Swin Transformer}: Hierarchical Vision Transformer Using Shifted Windows. International Conference on Computer Vision (ICCV) 2021.
+[^Gulcehre2015On]: On Using Monolingual Corpora in Neural Machine Translation. Arxiv.
+[^Casanova2022YourTTS]: {YourTTS}: Towards Zero-Shot Multi-Speaker {TTS} and Zero-Shot Voice Conversion for Everyone. International Conference on Machine Learning (ICML) 2022.
+[^Zeghidour2021SoundStream]: {SoundStream}: An End-to-End Neural Audio Codec. Transactions on Audio, Speech, and Language Processing 2021.
+[^Vaswani2017Attention]: Attention Is All You Need. Neural Information Processing Systems (NerurIPS) 2017.
+[^Du2022Glm]: {GLM}: General Language Model Pretraining With Autoregressive Blank Infilling. Association for Computational Linguistics (ACL) 2022.
+[^Dong2019Unified]: Unified Language Model Pre-Training for Natural Language Understanding and Generation. Neural Information Processing Systems (NerurIPS) 2019.
+[^Oord2018Representation]: Representation Learning With Contrastive Predictive Coding. Arxiv.
+[^Baevski2020Wav2vec]: Wav2vec 2.0: A Framework for Self-Supervised Learning of Speech Representations. Neural Information Processing Systems (NerurIPS) 2020.
+[^Cabrera2021Language]: Language Model Fusion for Streaming End to End Speech Recognition. Arxiv.
+[^Zen2019LibriTTS]: {LibriTTS}: A Corpus Derived From {LibriSpeech} for Text-to-Speech. International Speech Communication Association (Interspeech) 2019.
+[^Panayotov2015LibriSpeech]: {LibriSpeech}: An {ASR} Corpus Based on Public Domain Audio Books. International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2015.
+[^Veaux2016Cstr]: {CSTR VCTK} Corpus: English Multi-Speaker Corpus for {CSTR} Voice Cloning Toolkit. 
+[^Kominek2004Cmu]: The {CMU Arctic} Speech Databases. 5th ISCA Workshop on Speech Synthesis (SSW 5) 2004.
+[^Wester2010Emime]: The {EMIME} Bilingual Database. 
+[^Shu2022Non-Intrusive]: Non-Intrusive Speech Quality Assessment With a Multi-Task Learning Based Subband Adaptive Attention Temporal Convolutional Neural Network. International Speech Communication Association (Interspeech) 2022.
+[^Desplanques2020Ecapa-Tdnn]: {ECAPA-TDNN}: Emphasized Channel Attention, Propagation and Aggregation in {TDNN} Based Speaker Verification. International Speech Communication Association (Interspeech) 2020.
+[^Steinschneider2013Representation]: Representation of Speech in Human Auditory Cortex: Is It Special?. Hearing Research 2013.
+[^Dao2023FlashAttention-2]: FlashAttention-2: Faster Attention With Better Parallelism and Work Partitioning. Arxiv.
+[^Yu2023Megabyte]: MEGABYTE: Predicting Million-Byte Sequences With Multiscale Transformers. Arxiv.
+[^Das2021Case-Based]: Case-Based Reasoning for Natural Language Queries Over Knowledge Bases. Association for Computational Linguistics (ACL) 2021.
+[^Yamagishi2021ASVspoof]: ASVspoof 2021: Accelerating Progress in Spoofed and Deepfake Speech Detection. Arxiv.
