--- a/Models/-VC/2025.06.10_Pureformer-VC.md
+++ b/Models/-VC/2025.06.10_Pureformer-VC.md
@@ -17,7 +17,7 @@
   - [Github](https://github.com/ywh-my/PureformerVC)
   - [Demo]()
 - 文件:
-  - [ArXiv:2506.08348v1](_PDF/2025.06.10_2506.08348v1_Pureformer-VC__Non-Parallel_Voice_Conversion_with_Pure_Stylized_Transformer_Blocks_and_Triplet_Discriminative_Training.pdf)
+  - [ArXiv:2506.08348v1](_PDF/2025.06.10_2506.08348v1__Pureformer-VC__Non-Parallel_Voice_Conversion_with_Pure_Stylized_Transformer_Blocks_and_Triplet_Discriminative_Training.pdf)
   - [Publication] #TODO
 
 </details>
@@ -56,11 +56,10 @@ The KNN-VC method substitutes the source content units with the nearest content 
 These high-quality VC methods require deep speech unit learning with a multi-speaker corpus pre-training, which can be time-consuming.
 
 Considering that speech can be broken down into multiple components [^Qian2020Unsupervised] (e.g., timbre, pitch, content, and rhythm), disentanglement-based VC appears to be a promising approach.
-This framework enables neural networks to develop distinct representations of each speech component using several encoders and a decoder
-[^Qian2020Unsupervised], [^Chan2022Speechsplit2.].
+This framework enables neural networks to develop distinct representations of each speech component using several encoders and a decoder [^Qian2020Unsupervised], [^Chan2022Speechsplit2].
 During training, each encoder analyzes the corresponding spectrogram to create independent representations of the speech components.
 The decoder then combines these components to reconstruct the original speech.
-However, current methods—such as the forced decomposition in SpeechSplit [^Qian2020Unsupervised], [^Chan2022Speechsplit2.], INVC [^Chou2019One-Shot], and the information bottleneck strategy in AutoVC [^Qian2019Autovc]—do not ensure perfect disentanglement or high-quality reconstruction.
+However, current methods—such as the forced decomposition in SpeechSplit [^Qian2020Unsupervised], [^Chan2022Speechsplit2], INVC [^Chou2019One-Shot], and the information bottleneck strategy in AutoVC [^Qian2019Autovc]—do not ensure perfect disentanglement or high-quality reconstruction.
 
 *So, how should an efficient encoder-decoder framework be constructed for VC tasks?*
 
@@ -440,7 +439,7 @@ In conclusion, the ***Pureformer-VC*** model, fortified by the strategic applica
 [^Casanova2022Yourtts]: Yourtts: Towards Zero-Shot Multi-Speaker TTS and Zero-Shot Voice Conversion for Everyone. International Conference on Machine Learning 2022.
 [^Baas2023Voice]: Voice Conversion With Just Nearest Neighbors. arXiv:2305.18975.
 [^Qian2020Unsupervised]: Unsupervised Speech Decomposition via Triple Information Bottleneck. International Conference on Machine Learning 2020.
-[^Chan2022Speechsplit2.]: Speechsplit2. 0: Unsupervised Speech Disentanglement for Voice Conversion Without Tuning Autoencoder Bottlenecks. ICASSP 2022-2022 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2022.
+[^Chan2022Speechsplit2]: Speechsplit2.0: Unsupervised Speech Disentanglement for Voice Conversion Without Tuning Autoencoder Bottlenecks. ICASSP 2022-2022 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2022.
 [^Chou2019One-Shot]: One-Shot Voice Conversion by Separating Speaker and Content Representations With Instance Normalization. arXiv:1904.05742.
 [^Qian2019Autovc]: Autovc: Zero-Shot Voice Style Transfer With Only Autoencoder Loss. International Conference on Machine Learning 2019.
 [^Gulati2020Conformer]: Conformer: Convolution-Augmented Transformer for Speech Recognition. arXiv:2005.08100.
