--- a/Models/-VC/2023.12.14_SEF-VC.md
+++ b/Models/-VC/2023.12.14_SEF-VC.md
@@ -15,8 +15,8 @@
   - [Github]()
   - [Demo]()
 - 文件:
-  - [ArXiv:2312.08676v1](D:\Speech\Sapphire-TTS-Collection\Models\-VC\_PDF\2023.12.14_2312.08676v1_SEF-VC__Speaker_Embedding_Free_Zero-Shot_Voice_Conversion_With_Cross_Attention.pdf)
-  - [ArXiv:2312.08676v2](D:\Speech\Sapphire-TTS-Collection\Models\-VC\_PDF\2023.12.14_2312.08676v2_SEF-VC__Speaker_Embedding_Free_Zero-Shot_Voice_Conversion_With_Cross_Attention.pdf)
+  - [ArXiv:2312.08676v1](_PDF/2023.12.14_2312.08676v1__SEF-VC__Speaker_Embedding_Free_Zero-Shot_Voice_Conversion_With_Cross_Attention.pdf)
+  - [ArXiv:2312.08676v2](_PDF/2023.12.14_2312.08676v2__SEF-VC__Speaker_Embedding_Free_Zero-Shot_Voice_Conversion_With_Cross_Attention.pdf)
   - [Publication] #TODO
 
 </details>
@@ -25,7 +25,7 @@
 
 Zero-shot voice conversion (VC) aims to transfer the source speaker timbre to arbitrary {\em unseen} target speaker timbre, while keeping the linguistic content unchanged.
 Although the voice of generated speech can be controlled by providing the speaker embedding of the target speaker, the speaker similarity still lags behind the ground truth recordings.
-In this paper, we propose SEF-VC, a speaker embedding free voice conversion model, 
+In this paper, we propose SEF-VC, a speaker embedding free voice conversion model,
 which is designed to learn and incorporate speaker timbre from reference speech via a powerful position-agnostic cross-attention mechanism, and then reconstruct waveform from HuBERT semantic tokens in a non-autoregressive manner.
 The concise design of SEF-VC enhances its training stability and voice conversion performance.
 Objective and subjective evaluations demonstrate the superiority of SEF-VC to generate high-quality speech with better similarity to target reference than strong zero-shot VC baselines, even for very short reference speeches.
@@ -58,7 +58,7 @@ Zero-shot voice conversion (VC) aims to transfer the source speaker timbre to ar
 
 Although the voice of generated speech can be controlled by providing the speaker embedding of the target speaker, the speaker similarity still lags behind the ground truth recordings.
 
-In this paper, we propose SEF-VC, a speaker embedding free voice conversion model, 
+In this paper, we propose SEF-VC, a speaker embedding free voice conversion model,
 which is designed to learn and incorporate speaker timbre from reference speech via a powerful position-agnostic cross-attention mechanism, and then reconstruct waveform from HuBERT semantic tokens in a non-autoregressive manner.
 
 The concise design of SEF-VC enhances its training stability and voice conversion performance.
@@ -77,7 +77,7 @@ Zero-shot voice conversion, cross-attention, speaker embedding free.
 
 Zero-shot voice conversion (VC) is tasked to convert the given speech from the source speaker to a previously unseen target speaker while preserving the speech content.
 
-This mainly involves two difficulties: disentanglement of speaker and content information, and speaker representation modeling. 
+This mainly involves two difficulties: disentanglement of speaker and content information, and speaker representation modeling.
 Disentanglement aims to remove speaker information from source speech, while speaker representation modeling seeks a better way to represent and incorporate speaker identities.
 
 There are consistent and active research efforts in the disentanglement of speaker information.
@@ -92,7 +92,7 @@ A more popular technique for speaker disentanglement recently is the adoption of
 
 vq-wav2vec[^Baevski2020Vq-Wav2vec] and HuBERT[^Hsu2021Hubert].
 
-Features extracted by these models are proved to well preserve the linguistic content while being scarcely speaker-variant [^Polyak2021Speech], [^Du2023Speaker]. 
+Features extracted by these models are proved to well preserve the linguistic content while being scarcely speaker-variant [^Polyak2021Speech], [^Du2023Speaker].
 Previous studies introduce self-supervised semantic features into VC, but still in the traditional auto-encoder framework [^Lin2021{S2vc:}], [^Dang2022Training], or not in an any-to-any fashion[^Huang2021Any-to-One].
 
 [^Polyak2021Speech] proposes to train a vocoder that synthesizes waveforms from semantic tokens, which also brings an easier VC framework.
@@ -115,7 +115,7 @@ We propose to use the position-agnostic cross-attention mechanism[^Du2023UniCATS
 
 This replaces the conventional speaker embedding approach with a novel, effective, and robust **cross-attention** mechanism[^Du2023UniCATS].
 
-Then, SEF-VC is designed to learn and incorporate speaker timbre from reference speech via this type of cross-attention, and then reconstruct waveform from HuBERT semantic tokens in a non-autoregressive manner. 
+Then, SEF-VC is designed to learn and incorporate speaker timbre from reference speech via this type of cross-attention, and then reconstruct waveform from HuBERT semantic tokens in a non-autoregressive manner.
 
 With the position-agnostic cross-attention mechanism, the speaker information is better modeled and incorporated into the semantic backbone.
 
@@ -141,12 +141,12 @@ Audio samples are available at \url{https:///junjiell.github.io/SEF-VC/}.
 
 ### Non-Autoregressive Semantic Backbone
 
-The architecture of the model is illustrated in Fig.~[fig:model](#fig:model). 
+The architecture of the model is illustrated in Fig.~[fig:model](#fig:model).
 The backbone model of SEF-VC is a standard vocoder on discrete self-supervised speech representations, like vec2wav[^Du2023UniCATS] and SSR-VC[^Polyak2021Speech].
 
 We first obtain semantic tokens by conducting K-Means quantization on the continuous features extracted by a pretrained HuBERT model.
 
-Then, the frame-level semantic tokens are passed through two semantic encoders, and then upsampled into waveforms in a HifiGAN generator. 
+Then, the frame-level semantic tokens are passed through two semantic encoders, and then upsampled into waveforms in a HifiGAN generator.
 Following [^Du2023UniCATS], an auxiliary feature adaptor is placed between two semantic encoders, which helps to model the speech prosody features by predicting the pitch, probability of voice, and energy (PPE).
 
 To enhance the synthesis quality, we also adopt adversarial training following the practices in vocoders[^Kong2020Hifi-Gan], [^Du2023UniCATS].
@@ -160,15 +160,15 @@ As the self-supervised semantic tokens scarcely provide speaker information, the
 
 Rather than previous works that adopt speaker embeddings, we formulate this as a speaker embedding free cross-attention task, where the semantic backbone learns and incorporates speaker timbre directly from the reference speech.
 
-To introduce the reference speech with sufficient speaker information from which we extract mel-spectrograms, we use the position-agnostic cross-attention mechanism to incorporate speaker information into the semantic backbone. 
+To introduce the reference speech with sufficient speaker information from which we extract mel-spectrograms, we use the position-agnostic cross-attention mechanism to incorporate speaker information into the semantic backbone.
 
-Specifically, in the semantic backbone, each of 
+Specifically, in the semantic backbone, each of
 
 the semantic encoders consist of several Conformer blocks[^Gulati2020{Conformer].
 
 Within each conformer block, we place a cross-attention layer between the self-attention layer and the convolution module.
 
-Before cross-attention, the mel-spectrogram of the target speech is fed through a mel encoder which consists of 
+Before cross-attention, the mel-spectrogram of the target speech is fed through a mel encoder which consists of
 a 1D-convolution layers as a pre-net.
 
 Notably, this cross-attention mechanism is agnostic of input positions, which means the positional encodings in the standard attention mechanism are canceled when computing key and value matrices from encoded mel sequence.
@@ -183,7 +183,7 @@ For short references, the cross-attention mechanism can still fully explore and 
 
 For long references, the position-agnostic cross-attention mechanism provides an additional advantage that it ideally supports reference speech of arbitrary lengths.
 
-Compared to autoregressive speech language models that prefixes the semantic content by acoustic prompts and models the whole sequence by self-attention only, 
+Compared to autoregressive speech language models that prefixes the semantic content by acoustic prompts and models the whole sequence by self-attention only,
 SEF-VC does not suffer from inference stability and speed issues because of the position-agnostic cross-attention method in a non-autogressive manner, either.
 
 \vspace{-0.4cm}
@@ -192,9 +192,9 @@ SEF-VC does not suffer from inference stability and speed issues because of the 
 
 \label{sybsec:train}
 
-As indicated by Fig.~[fig:model](#fig:model), we use non-parallel data to train our model. 
-Then, a single utterance is divided into two segments. 
-The first segment is used to extract the mel-spectrogram providing speaker information, which is cropped from a random starting point with length varying between 2 to 3 seconds randomly. 
+As indicated by Fig.~[fig:model](#fig:model), we use non-parallel data to train our model.
+Then, a single utterance is divided into two segments.
+The first segment is used to extract the mel-spectrogram providing speaker information, which is cropped from a random starting point with length varying between 2 to 3 seconds randomly.
 The rest of the utterance after the first segment serves as the second, which is fed to the pretrained HuBERT model to extract semantic tokens.
 
 This strategy ensures that the two segments always belong to the same speaker, without the need for oracle speaker labels.
@@ -229,23 +229,23 @@ The PPE is predicted based on the semantic information and reference speech toge
 
 Our experiments were conducted on LibriTTS[^Zen2019LibriTTS], a multi-speaker English dataset with a total duration of 586 hours.
 
-We downsampled the utterances to 16kHz and excluded utterances that were too long or too short for training. 
-It contains a total of 2456 speakers, including 2311 in the training set, 73 in the validation set, and 72 in the test set. 
+We downsampled the utterances to 16kHz and excluded utterances that were too long or too short for training.
+It contains a total of 2456 speakers, including 2311 in the training set, 73 in the validation set, and 72 in the test set.
 To evaluate the model's performance in zero-shot voice conversion, we selected 20 speakers from LibriTTS's test-clean set.
 
-Among them, 10 speakers served as source speakers, and 2 utterances of each speaker were selected as the source speeches. 
+Among them, 10 speakers served as source speakers, and 2 utterances of each speaker were selected as the source speeches.
 The remaining 10 served as target speakers and 1 utterance of each speaker with a length of about 3 seconds was selected as the reference speech.
 
-We extracted 1024-dimension semantic features from a pretrained HuBERT model\footnote{\url{https://github.com/facebookresearch/fairseq/blob/main/examples/hubert}} trained on 60k hours of LibriLight. 
+We extracted 1024-dimension semantic features from a pretrained HuBERT model\footnote{\url{https://github.com/facebookresearch/fairseq/blob/main/examples/hubert}} trained on 60k hours of LibriLight.
 Then the semantic features were quantized by K-Means clustering with 2,000 centers offline.
 
-Both semantic encoders consisted of two Conformer blocks, in which multi-head attention layers for self-attention and cross-attention had 2 heads with an attention dimension of 184. 
-The mel-encoder contained 1 layer of convolution with kernel size 5 and an output dimension of 184. 
+Both semantic encoders consisted of two Conformer blocks, in which multi-head attention layers for self-attention and cross-attention had 2 heads with an attention dimension of 184.
+The mel-encoder contained 1 layer of convolution with kernel size 5 and an output dimension of 184.
 Both generator and discriminator were optimized by Adam with an initial learning rate of 0.0002, and $\beta_1=0.5$, $\beta_2=0.9$, respectively.
 
 The learning rate decreased by 0.5 for every 200k steps.
 
-The coefficients of each loss were  $\lambda_{\mathrm{mel}} = 60, \lambda_{\mathrm{aux}} = 5, \lambda_{\mathrm{rec}} = 45, \lambda_{\mathrm{adv}} = 1, \lambda_{\mathrm{feat}} = 2$. 
+The coefficients of each loss were  $\lambda_{\mathrm{mel}} = 60, \lambda_{\mathrm{aux}} = 5, \lambda_{\mathrm{rec}} = 45, \lambda_{\mathrm{adv}} = 1, \lambda_{\mathrm{feat}} = 2$.
 Besides, the frameshift of reference mel-spectrograms was 10ms to better capture acoustic details, especially speaker identity, while the frame shift of semantic tokens was 20ms.
 \vspace{-0.3cm}
 
@@ -265,7 +265,7 @@ It conducts VC by separating source speaker information in the reversed flow pro
 
 -  **Polyak et al.**[^Polyak2021Speech] that separates speaker and semantic information with a disentangled representation of speech content, prosody, and speaker identity information.
 
-It uses pretrained encoders to extract semantic tokens, pitch tokens, and target speaker embeddings respectively, and synthesizes waveform with a HifiGAN generator. 
+It uses pretrained encoders to extract semantic tokens, pitch tokens, and target speaker embeddings respectively, and synthesizes waveform with a HifiGAN generator.
 For ease of presentation, we refer to it as **SSR-VC** hereafter.
 
 For fair comparison, we trained and tested AdaIN-VC\footnote{\url{https://github.com/jjery2243542/adaptive_voice_conversion}}, YourTTS\footnote{\url{https://github.com/Edresson/YourTTS}} and SSR-VC\footnote{An unofficial implementation by us.} on the same data partition with SEF-VC in LibriTTS.
@@ -276,7 +276,7 @@ For fair comparison, we trained and tested AdaIN-VC\footnote{\url{https://github
 
 \label{subsec:vc results}
 
-We conducted objective and subjective evaluations to evaluate the speaker similarity and speech intelligibility of SEF-VC on any-to-any voice conversion. 
+We conducted objective and subjective evaluations to evaluate the speaker similarity and speech intelligibility of SEF-VC on any-to-any voice conversion.
 The objective evaluations included speaker embedding cosine similarity (SECS) and character error rate (CER) in ASR.
 
 The SECS metric was computed by extracting speaker embeddings with Resemblyzer\footnote{\url{https://github.com/resemble-ai/Resemblyzer}} and calculating the cosine similarity.
@@ -287,12 +287,12 @@ We also performed subjective evaluations by mean opinion score (MOS) tests to me
 
 Naturalness MOS tests were also conducted to measure the intelligibility of synthesized voice.
 
-The SECS, CER, similarity, and naturalness MOS results can be seen in Table [tab:main](#tab:main). 
+The SECS, CER, similarity, and naturalness MOS results can be seen in Table [tab:main](#tab:main).
 
 The results demonstrate our model can convert voice to target speaker better in any-to-any voice conversion.
 
-AdaIN-VC is limited by the bottleneck in auto-encoder, and thus synthesizes voice with poor quality. 
-YourTTS and SSR-VC both heavily depend on global speaker embedding, which lacks enough target speaker information, resulting in suboptimal conversion performance. 
+AdaIN-VC is limited by the bottleneck in auto-encoder, and thus synthesizes voice with poor quality.
+YourTTS and SSR-VC both heavily depend on global speaker embedding, which lacks enough target speaker information, resulting in suboptimal conversion performance.
 This drawback of global speaker embedding will also be verified in section [subsub:abla spk](#subsub:abla spk).
 
 On the contrary, the proposed speaker embedding free SEF-VC using  position-agnostic cross-attention can better capture and incorporate speaker information, hence obtaining better speaker similarity.
@@ -313,9 +313,9 @@ In this section, we inspect the impact of different lengths of prompts within SE
 
 The results can be seen in Figure [fig:abal prompt](#fig:abal prompt).
 
-In SSR-VC[^Polyak2021Speech], the prompt serves to extract speaker embedding. 
-The results show that the performance of our model improves with the length of reference speech getting longer, which benefits from our proposed position-agnostic cross-attention mechanism. 
-Intuitively, a longer prompt makes it easier to model the speaker information, thus more helpful to convert the voice to target speakers. 
+In SSR-VC[^Polyak2021Speech], the prompt serves to extract speaker embedding.
+The results show that the performance of our model improves with the length of reference speech getting longer, which benefits from our proposed position-agnostic cross-attention mechanism.
+Intuitively, a longer prompt makes it easier to model the speaker information, thus more helpful to convert the voice to target speakers.
 Even in the case where the reference speech length is as short as 2s, the SECS of SEF-VC is still acceptable compared to SSR-VC[^Polyak2021Speech], which shows cross-attention mechanism is more robust than speaker embedding.
 
 Starting from a reference length of 3s, SEF-VC can already capture the target speaker's timbre to a great extent.
@@ -334,10 +334,10 @@ In this part, we demonstrate the effectiveness of our proposed cross-attention m
 
 For comparison, we remove the cross-attention module in SEF-VC and add speaker embedding directly into the  HifiGAN[^Kong2020Hifi-Gan] generator following YourTTS[^Casanova2022Yourtts].
 
-X-vector[^Snyder2018X-Vectors] is regarded as speaker embedding extracted by Kaldi[^Povey2011Kaldi]. 
+X-vector[^Snyder2018X-Vectors] is regarded as speaker embedding extracted by Kaldi[^Povey2011Kaldi].
 The result is shown in table [tab:abal spk](#tab:abal spk).
 
-It can thus be seen that the adopted cross-attention mechanism greatly improved the speaker similarity, which means it can better learn and incorporate target speaker information with latent content representation than simple speaker embedding addition. 
+It can thus be seen that the adopted cross-attention mechanism greatly improved the speaker similarity, which means it can better learn and incorporate target speaker information with latent content representation than simple speaker embedding addition.
 One possible reason is that global speaker embedding cannot provide enough speaker-dependent information, like time-varying pitch, which contributes to speaker similarity too.
 
 <a id="tab:abal spk">Experiment on the effectiveness of different speaker modeling.</a>
@@ -403,7 +403,7 @@ BE2022059).
 [^Du2023UniCATS]: UniCATS: A Unified Context-Aware Text-to-Speech Framework With Contextual VQ-Diffusion and Vocoding. arXiv:2306.07547.
 [^Kong2020Hifi-Gan]: Hifi-Gan: Generative Adversarial Networks for Efficient and High Fidelity Speech Synthesis. Proc. NeurIPS 2020.
 [^Gulati2020{Conformer]: {Conformer: Convolution-Augmented Transformer for Speech Recognition}. Proc. Interspeech 2020 2020.
-[^Zen2019LibriTTS]: LibriTTS: A Corpus Derived From LibriSpeech for Text-to-Speech. 
+[^Zen2019LibriTTS]: LibriTTS: A Corpus Derived From LibriSpeech for Text-to-Speech.
 [^Chou2019{One-Shot]: {One-Shot Voice Conversion by Separating Speaker and Content Representations With Instance Normalization}. Proc. Interspeech 2019 2019.
 [^Hussain2023Ace-Vc]: ACE-VC: Adaptive and Controllable Voice Conversion Using Explicitly Disentangled Self-Supervised Speech Representations. Proc. IEEE ICASSP 2023.
 [^Povey2011Kaldi]: The Kaldi Speech Recognition Toolkit. Proc. IEEE ASRU 2011.# SEF-VC: Speaker Embedding Free Zero-Shot Voice Conversion With Cross Attention
@@ -433,7 +433,7 @@ BE2022059).
 
 Zero-shot voice conversion (VC) aims to transfer the source speaker timbre to arbitrary {\em unseen} target speaker timbre, while keeping the linguistic content unchanged.
 Although the voice of generated speech can be controlled by providing the speaker embedding of the target speaker, the speaker similarity still lags behind the ground truth recordings.
-In this paper, we propose SEF-VC, a speaker embedding free voice conversion model, 
+In this paper, we propose SEF-VC, a speaker embedding free voice conversion model,
 which is designed to learn and incorporate speaker timbre from reference speech via a powerful position-agnostic cross-attention mechanism, and then reconstruct waveform from HuBERT semantic tokens in a non-autoregressive manner.
 The concise design of SEF-VC enhances its training stability and voice conversion performance.
 Objective and subjective evaluations demonstrate the superiority of SEF-VC to generate high-quality speech with better similarity to target reference than strong zero-shot VC baselines, even for very short reference speeches.
@@ -466,7 +466,7 @@ Zero-shot voice conversion (VC) aims to transfer the source speaker timbre to ar
 
 Although the voice of generated speech can be controlled by providing the speaker embedding of the target speaker, the speaker similarity still lags behind the ground truth recordings.
 
-In this paper, we propose SEF-VC, a speaker embedding free voice conversion model, 
+In this paper, we propose SEF-VC, a speaker embedding free voice conversion model,
 which is designed to learn and incorporate speaker timbre from reference speech via a powerful position-agnostic cross-attention mechanism, and then reconstruct waveform from HuBERT semantic tokens in a non-autoregressive manner.
 
 The concise design of SEF-VC enhances its training stability and voice conversion performance.
@@ -485,7 +485,7 @@ Zero-shot voice conversion, cross-attention, speaker embedding free.
 
 Zero-shot voice conversion (VC) is tasked to convert the given speech from the source speaker to a previously unseen target speaker while preserving the speech content.
 
-This mainly involves two difficulties: disentanglement of speaker and content information, and speaker representation modeling. 
+This mainly involves two difficulties: disentanglement of speaker and content information, and speaker representation modeling.
 Disentanglement aims to remove speaker information from source speech, while speaker representation modeling seeks a better way to represent and incorporate speaker identities.
 
 There are consistent and active research efforts in the disentanglement of speaker information.
@@ -500,7 +500,7 @@ A more popular technique for speaker disentanglement recently is the adoption of
 
 vq-wav2vec[^Baevski2020Vq-Wav2vec] and HuBERT[^Hsu2021Hubert].
 
-Features extracted by these models are proved to well preserve the linguistic content while being scarcely speaker-variant [^Polyak2021Speech], [^Du2023Speaker]. 
+Features extracted by these models are proved to well preserve the linguistic content while being scarcely speaker-variant [^Polyak2021Speech], [^Du2023Speaker].
 Previous studies introduce self-supervised semantic features into VC, but still in the traditional auto-encoder framework [^Lin2021{S2vc:}], [^Dang2022Training], or not in an any-to-any fashion[^Huang2021Any-to-One].
 
 [^Polyak2021Speech] proposes to train a vocoder that synthesizes waveforms from semantic tokens, which also brings an easier VC framework.
@@ -523,7 +523,7 @@ We propose to use the position-agnostic cross-attention mechanism[^Du2023UniCATS
 
 This replaces the conventional speaker embedding approach with a novel, effective, and robust **cross-attention** mechanism[^Du2023UniCATS].
 
-Then, SEF-VC is designed to learn and incorporate speaker timbre from reference speech via this type of cross-attention, and then reconstruct waveform from HuBERT semantic tokens in a non-autoregressive manner. 
+Then, SEF-VC is designed to learn and incorporate speaker timbre from reference speech via this type of cross-attention, and then reconstruct waveform from HuBERT semantic tokens in a non-autoregressive manner.
 
 With the position-agnostic cross-attention mechanism, the speaker information is better modeled and incorporated into the semantic backbone.
 
@@ -549,12 +549,12 @@ Audio samples are available at \url{https:///junjiell.github.io/SEF-VC/}.
 
 ### Non-Autoregressive Semantic Backbone
 
-The architecture of the model is illustrated in Fig.~[fig:model](#fig:model). 
+The architecture of the model is illustrated in Fig.~[fig:model](#fig:model).
 The backbone model of SEF-VC is a standard vocoder on discrete self-supervised speech representations, like vec2wav[^Du2023UniCATS] and SSR-VC[^Polyak2021Speech].
 
 We first obtain semantic tokens by conducting K-Means quantization on the continuous features extracted by a pretrained HuBERT model.
 
-Then, the frame-level semantic tokens are passed through two semantic encoders, and then upsampled into waveforms in a HifiGAN generator. 
+Then, the frame-level semantic tokens are passed through two semantic encoders, and then upsampled into waveforms in a HifiGAN generator.
 Following [^Du2023UniCATS], an auxiliary feature adaptor is placed between two semantic encoders, which helps to model the speech prosody features by predicting the pitch, probability of voice, and energy (PPE).
 
 To enhance the synthesis quality, we also adopt adversarial training following the practices in vocoders[^Kong2020Hifi-Gan], [^Du2023UniCATS].
@@ -568,15 +568,15 @@ As the self-supervised semantic tokens scarcely provide speaker information, the
 
 Rather than previous works that adopt speaker embeddings, we formulate this as a speaker embedding free cross-attention task, where the semantic backbone learns and incorporates speaker timbre directly from the reference speech.
 
-To introduce the reference speech with sufficient speaker information from which we extract mel-spectrograms, we use the position-agnostic cross-attention mechanism to incorporate speaker information into the semantic backbone. 
+To introduce the reference speech with sufficient speaker information from which we extract mel-spectrograms, we use the position-agnostic cross-attention mechanism to incorporate speaker information into the semantic backbone.
 
-Specifically, in the semantic backbone, each of 
+Specifically, in the semantic backbone, each of
 
 the semantic encoders consist of several Conformer blocks[^Gulati2020{Conformer].
 
 Within each conformer block, we place a cross-attention layer between the self-attention layer and the convolution module.
 
-Before cross-attention, the mel-spectrogram of the target speech is fed through a mel encoder which consists of 
+Before cross-attention, the mel-spectrogram of the target speech is fed through a mel encoder which consists of
 a 1D-convolution layers as a pre-net.
 
 Notably, this cross-attention mechanism is agnostic of input positions, which means the positional encodings in the standard attention mechanism are canceled when computing key and value matrices from encoded mel sequence.
@@ -591,7 +591,7 @@ For short references, the cross-attention mechanism can still fully explore and 
 
 For long references, the position-agnostic cross-attention mechanism provides an additional advantage that it ideally supports reference speech of arbitrary lengths.
 
-Compared to autoregressive speech language models that prefixes the semantic content by acoustic prompts and models the whole sequence by self-attention only, 
+Compared to autoregressive speech language models that prefixes the semantic content by acoustic prompts and models the whole sequence by self-attention only,
 SEF-VC does not suffer from inference stability and speed issues because of the position-agnostic cross-attention method in a non-autogressive manner, either.
 
 \vspace{-0.4cm}
@@ -600,9 +600,9 @@ SEF-VC does not suffer from inference stability and speed issues because of the 
 
 \label{sybsec:train}
 
-As indicated by Fig.~[fig:model](#fig:model), we use non-parallel data to train our model. 
-Then, a single utterance is divided into two segments. 
-The first segment is used to extract the mel-spectrogram providing speaker information, which is cropped from a random starting point with length varying between 2 to 3 seconds randomly. 
+As indicated by Fig.~[fig:model](#fig:model), we use non-parallel data to train our model.
+Then, a single utterance is divided into two segments.
+The first segment is used to extract the mel-spectrogram providing speaker information, which is cropped from a random starting point with length varying between 2 to 3 seconds randomly.
 The rest of the utterance after the first segment serves as the second, which is fed to the pretrained HuBERT model to extract semantic tokens.
 
 This strategy ensures that the two segments always belong to the same speaker, without the need for oracle speaker labels.
@@ -637,23 +637,23 @@ The PPE is predicted based on the semantic information and reference speech toge
 
 Our experiments were conducted on LibriTTS[^Zen2019LibriTTS], a multi-speaker English dataset with a total duration of 586 hours.
 
-We downsampled the utterances to 16kHz and excluded utterances that were too long or too short for training. 
-It contains a total of 2456 speakers, including 2311 in the training set, 73 in the validation set, and 72 in the test set. 
+We downsampled the utterances to 16kHz and excluded utterances that were too long or too short for training.
+It contains a total of 2456 speakers, including 2311 in the training set, 73 in the validation set, and 72 in the test set.
 To evaluate the model's performance in zero-shot voice conversion, we selected 20 speakers from LibriTTS's test-clean set.
 
-Among them, 10 speakers served as source speakers, and 2 utterances of each speaker were selected as the source speeches. 
+Among them, 10 speakers served as source speakers, and 2 utterances of each speaker were selected as the source speeches.
 The remaining 10 served as target speakers and 1 utterance of each speaker with a length of about 3 seconds was selected as the reference speech.
 
-We extracted 1024-dimension semantic features from a pretrained HuBERT model\footnote{\url{https://github.com/facebookresearch/fairseq/blob/main/examples/hubert}} trained on 60k hours of LibriLight. 
+We extracted 1024-dimension semantic features from a pretrained HuBERT model\footnote{\url{https://github.com/facebookresearch/fairseq/blob/main/examples/hubert}} trained on 60k hours of LibriLight.
 Then the semantic features were quantized by K-Means clustering with 2,000 centers offline.
 
-Both semantic encoders consisted of two Conformer blocks, in which multi-head attention layers for self-attention and cross-attention had 2 heads with an attention dimension of 184. 
-The mel-encoder contained 1 layer of convolution with kernel size 5 and an output dimension of 184. 
+Both semantic encoders consisted of two Conformer blocks, in which multi-head attention layers for self-attention and cross-attention had 2 heads with an attention dimension of 184.
+The mel-encoder contained 1 layer of convolution with kernel size 5 and an output dimension of 184.
 Both generator and discriminator were optimized by Adam with an initial learning rate of 0.0002, and $\beta_1=0.5$, $\beta_2=0.9$, respectively.
 
 The learning rate decreased by 0.5 for every 200k steps.
 
-The coefficients of each loss were  $\lambda_{\mathrm{mel}} = 60, \lambda_{\mathrm{aux}} = 5, \lambda_{\mathrm{rec}} = 45, \lambda_{\mathrm{adv}} = 1, \lambda_{\mathrm{feat}} = 2$. 
+The coefficients of each loss were  $\lambda_{\mathrm{mel}} = 60, \lambda_{\mathrm{aux}} = 5, \lambda_{\mathrm{rec}} = 45, \lambda_{\mathrm{adv}} = 1, \lambda_{\mathrm{feat}} = 2$.
 Besides, the frameshift of reference mel-spectrograms was 10ms to better capture acoustic details, especially speaker identity, while the frame shift of semantic tokens was 20ms.
 \vspace{-0.3cm}
 
@@ -673,7 +673,7 @@ It conducts VC by separating source speaker information in the reversed flow pro
 
 -  **Polyak et al.**[^Polyak2021Speech] that separates speaker and semantic information with a disentangled representation of speech content, prosody, and speaker identity information.
 
-It uses pretrained encoders to extract semantic tokens, pitch tokens, and target speaker embeddings respectively, and synthesizes waveform with a HifiGAN generator. 
+It uses pretrained encoders to extract semantic tokens, pitch tokens, and target speaker embeddings respectively, and synthesizes waveform with a HifiGAN generator.
 For ease of presentation, we refer to it as **SSR-VC** hereafter.
 
 For fair comparison, we trained and tested AdaIN-VC\footnote{\url{https://github.com/jjery2243542/adaptive_voice_conversion}}, YourTTS\footnote{\url{https://github.com/Edresson/YourTTS}} and SSR-VC\footnote{An unofficial implementation by us.} on the same data partition with SEF-VC in LibriTTS.
@@ -684,7 +684,7 @@ For fair comparison, we trained and tested AdaIN-VC\footnote{\url{https://github
 
 \label{subsec:vc results}
 
-We conducted objective and subjective evaluations to evaluate the speaker similarity and speech intelligibility of SEF-VC on any-to-any voice conversion. 
+We conducted objective and subjective evaluations to evaluate the speaker similarity and speech intelligibility of SEF-VC on any-to-any voice conversion.
 The objective evaluations included speaker embedding cosine similarity (SECS) and character error rate (CER) in ASR.
 
 The SECS metric was computed by extracting speaker embeddings with Resemblyzer\footnote{\url{https://github.com/resemble-ai/Resemblyzer}} and calculating the cosine similarity.
@@ -695,12 +695,12 @@ We also performed subjective evaluations by mean opinion score (MOS) tests to me
 
 Naturalness MOS tests were also conducted to measure the intelligibility of synthesized voice.
 
-The SECS, CER, similarity, and naturalness MOS results can be seen in Table [tab:main](#tab:main). 
+The SECS, CER, similarity, and naturalness MOS results can be seen in Table [tab:main](#tab:main).
 
 The results demonstrate our model can convert voice to target speaker better in any-to-any voice conversion.
 
-AdaIN-VC is limited by the bottleneck in auto-encoder, and thus synthesizes voice with poor quality. 
-YourTTS and SSR-VC both heavily depend on global speaker embedding, which lacks enough target speaker information, resulting in suboptimal conversion performance. 
+AdaIN-VC is limited by the bottleneck in auto-encoder, and thus synthesizes voice with poor quality.
+YourTTS and SSR-VC both heavily depend on global speaker embedding, which lacks enough target speaker information, resulting in suboptimal conversion performance.
 This drawback of global speaker embedding will also be verified in section [subsub:abla spk](#subsub:abla spk).
 
 On the contrary, the proposed speaker embedding free SEF-VC using  position-agnostic cross-attention can better capture and incorporate speaker information, hence obtaining better speaker similarity.
@@ -721,9 +721,9 @@ In this section, we inspect the impact of different lengths of prompts within SE
 
 The results can be seen in Figure [fig:abal prompt](#fig:abal prompt).
 
-In SSR-VC[^Polyak2021Speech], the prompt serves to extract speaker embedding. 
-The results show that the performance of our model improves with the length of reference speech getting longer, which benefits from our proposed position-agnostic cross-attention mechanism. 
-Intuitively, a longer prompt makes it easier to model the speaker information, thus more helpful to convert the voice to target speakers. 
+In SSR-VC[^Polyak2021Speech], the prompt serves to extract speaker embedding.
+The results show that the performance of our model improves with the length of reference speech getting longer, which benefits from our proposed position-agnostic cross-attention mechanism.
+Intuitively, a longer prompt makes it easier to model the speaker information, thus more helpful to convert the voice to target speakers.
 Even in the case where the reference speech length is as short as 2s, the SECS of SEF-VC is still acceptable compared to SSR-VC[^Polyak2021Speech], which shows cross-attention mechanism is more robust than speaker embedding.
 
 Starting from a reference length of 3s, SEF-VC can already capture the target speaker's timbre to a great extent.
@@ -742,10 +742,10 @@ In this part, we demonstrate the effectiveness of our proposed cross-attention m
 
 For comparison, we remove the cross-attention module in SEF-VC and add speaker embedding directly into the  HifiGAN[^Kong2020Hifi-Gan] generator following YourTTS[^Casanova2022Yourtts].
 
-X-vector[^Snyder2018X-Vectors] is regarded as speaker embedding extracted by Kaldi[^Povey2011Kaldi]. 
+X-vector[^Snyder2018X-Vectors] is regarded as speaker embedding extracted by Kaldi[^Povey2011Kaldi].
 The result is shown in table [tab:abal spk](#tab:abal spk).
 
-It can thus be seen that the adopted cross-attention mechanism greatly improved the speaker similarity, which means it can better learn and incorporate target speaker information with latent content representation than simple speaker embedding addition. 
+It can thus be seen that the adopted cross-attention mechanism greatly improved the speaker similarity, which means it can better learn and incorporate target speaker information with latent content representation than simple speaker embedding addition.
 One possible reason is that global speaker embedding cannot provide enough speaker-dependent information, like time-varying pitch, which contributes to speaker similarity too.
 
 <a id="tab:abal spk">Experiment on the effectiveness of different speaker modeling.</a>
@@ -811,7 +811,7 @@ BE2022059).
 [^Du2023UniCATS]: UniCATS: A Unified Context-Aware Text-to-Speech Framework With Contextual VQ-Diffusion and Vocoding. arXiv:2306.07547.
 [^Kong2020Hifi-Gan]: Hifi-Gan: Generative Adversarial Networks for Efficient and High Fidelity Speech Synthesis. Proc. NeurIPS 2020.
 [^Gulati2020{Conformer]: {Conformer: Convolution-Augmented Transformer for Speech Recognition}. Proc. Interspeech 2020 2020.
-[^Zen2019LibriTTS]: LibriTTS: A Corpus Derived From LibriSpeech for Text-to-Speech. 
+[^Zen2019LibriTTS]: LibriTTS: A Corpus Derived From LibriSpeech for Text-to-Speech.
 [^Chou2019{One-Shot]: {One-Shot Voice Conversion by Separating Speaker and Content Representations With Instance Normalization}. Proc. Interspeech 2019 2019.
 [^Hussain2023Ace-Vc]: ACE-VC: Adaptive and Controllable Voice Conversion Using Explicitly Disentangled Self-Supervised Speech Representations. Proc. IEEE ICASSP 2023.
 [^Povey2011Kaldi]: The Kaldi Speech Recognition Toolkit. Proc. IEEE ASRU 2011.
