--- a/Models/-VC/2019.05.14_AutoVC.md
+++ b/Models/-VC/2019.05.14_AutoVC.md
@@ -90,3 +90,29 @@ Also, equipped with a speaker embedding trained for speaker verification \cite{h
 Considering the quality of the results and the simplicity of its training scheme, \algname opens a new path towards a simpler and better voice conversion and general style transfer systems.
 
 The implementation will become publicly available. %\shiyu{implementation will become available??}
+
+## 2·Related Works
+
+\label{sec:realted}
+
+There are several works that perform non-parallel many-to-many voice conversion using VAE and its combination with adversarial training.
+
+VAE-VC \cite{hsu2016voice} is a simple voice conversion system using VAE.
+
+Afterward, much research focuses on removing the style information from the VAE code.
+
+VAW-GAN \cite{hsu2017voice} introduces a GAN on the VAE output.
+
+CDVAE-VC \cite{huang2018voice} introduces two VAEs on two spectral features and forces the latent codes of the two features to contain similar information.
+
+ACVAE-VC \cite{kameoka2018acvae} introduces an auxiliary classifier on the output to encourage the conversion results to be correctly classified as the target speaker's utterances. \citet{chou2018multi} introduce a classifier on the code and a GAN on the output.
+
+Similarly, StarGAN \cite{kaneko2017parallel} and CycleGAN \cite{zhu2017unpaired}, which consist of encoder-decoder architectures with GAN, are applied to voice conversion \cite{kameoka2018stargan, fang2018high}.
+
+GAN alone is also applied to voice conversion \cite{gao2018voice}.
+
+However, the conversion quality of these algorithms is still limited.
+
+Text transcriptions are introduced to assist the learning of the latent code \cite{xie2016kl, saito2018non, biadsy2019parrotron}, but we will focus on voice conversion without text transcriptions, which is more flexible for low-resourced languages.
+
+\citet{atalla2019look, chou2018multi, nachmani2019unsupervised} conduct research on style transfer using autoencoder, but none has unveiled its distribution-matching property by properly designing the bottleneck.
