--- a/Models/-VC/2019.05.14_AutoVC.md
+++ b/Models/-VC/2019.05.14_AutoVC.md
@@ -792,3 +792,411 @@ A similar classification experiment to test disentanglement is performed, and th
 In order to fairly compare with this result, we also perform a speaker classification test on the same $20$ speakers, and the classification accuracy is $14.2\%$.
 
 This result shows that bottleneck dimension tuning on speaker disentanglement is more effective than the more sophisticated adversarial training.
+
+## 6·Conclusion
+
+\label{sec:conclu}
+
+In this paper, we have proposed \algnamens, a non-parallel voice conversion algorithm that significantly outperforms the existing state-of-the-art, and that is the first to perform  zero-shot conversions.
+
+In sharp contrast to its performance advantage is its simple autoencoder structure that trains only on self-reconstruction, and a bottleneck tuning to balance between reconstruction quality and speaker disentanglement.
+
+In an era of building increasingly sophisticated algorithms for style transfer, our theoretical justification and the success of \algname suggest that it is time to return to simplicity, because sometimes an autoencoder with a careful bottleneck design is all you need to make a difference.
+
+\bibliography{example_paper}
+\bibliographystyle{icml2019}
+
+\clearpage
+
+\section*{Appendix: Proving Thm~[thm:guarantee](#thm:guarantee)}
+
+In this appendix, we will prove Thm~[thm:guarantee](#thm:guarantee).
+
+We will start with a few lemmas:
+
+\begin{lemma}
+
+Given assumptions 1 and 2 in Thm.~[thm:guarantee](#thm:guarantee), $S_1$ is a deterministic one-to-one mapping of $U_1$; so is $S_2$ to $U_2$.
+\label{lem:one-to-one}
+\end{lemma}
+
+The proof is obvious and omitted.
+
+\begin{lemma}
+
+Given all the assumptions in Thm.~[thm:guarantee](#thm:guarantee).
+
+Then exist a asymptotic global minimizer of Eq.~\eqref{eq:loss} that statisfies:
+1.
+
+$$
+
+\lim_{T \rightarrow \infty} \frac{1}{T}
+
+I(C_1; U_1) = 0
+\label{eq:lemma2}
+
+$$
+
+where $I(\cdot ; \cdot)$ denotes mutual information.
+
+2.
+
+$$
+
+\plim_{T\rightarrow \infty} \hat{X}_{1\rightarrow1} = X_1
+\label{eq:lemma1}
+
+$$
+
+3.
+
+$$
+
+\lim_{T \rightarrow \infty} \mathbb{E} [(\hat{X}_{1\rightarrow1} - X_1)^2] + \lambda \mathbb{E} [(E_c(\hat{X}_{1\rightarrow1}) - C_1)^2]= 0
+
+$$
+
+\label{lem:independence}
+\end{lemma}
+
+\begin{proof}
+
+Define the following set
+
+$$
+
+\mathcal{X} = \{x_1 : \log p_{X_1}(x_1 | U_1) \leq n-1 = n^* -1 + T^{2/3}\}
+
+$$
+
+$\mathcal{X}$ characterizes the set of instances where the optimal code length is guaranteed to be smaller than $n$.
+
+Denote $C_1 = E^*_c(X_1; T)$ as the the following coding scheme.
+
+When $X_1 \in \mathcal{X}$, $C_1$ is the optimal lossless code for $p_{X_1}(\cdot | u_1)$ (whose code length is smaller than $n$ by Shannon's Coding Theorem) padded with $0$ to length $n$.
+
+When $X_1 \notin \mathcal{X}$, $C_1$ is any random number of dimension $n$.
+
+Denote an auxiliary random variable
+
+$$
+
+A_1 = \mathbbm{1}[X_1 \in \mathcal{X}]
+
+$$
+
+where $\mathbbm{1}[\cdot]$ denotes the indicator function.
+
+When $A_1=1$, there is a one-to-one mapping from $C_1$ to $X_1$, so we have
+
+$$
+
+H(C_1 | U_1, A_1=1) = H(X_1 | U_1, A_1=1)
+\label{eq:lossless_code}
+
+$$
+
+On the other hand, define $h_m$ as the capacity of each dimension of $C_1$, \emph{i.e.}
+
+$$
+
+h_\textrm{m} = \max_{p_{C_{1i}}(\cdot)}
+
+H(C_{1i})
+
+$$
+
+Then, the information $C_1$ contains is limited by the number of dimensions it has, \emph{i.e.}
+
+$$
+
+$$
+\begin{aligned}
+
+H(C_1) &\leq \sum_i H(C_{1i}) \leq n h_\textrm{m} \\
+&\leq n^* h_m + T^{2/3} h_m \\
+&\leq H(X_1 | U_1) + 1 + T^{2/3} h_m
+
+\end{aligned}
+$$
+
+\label{eq:bottleneck_bound}
+
+$$
+
+where the second line is from assumption 3 of Thm.~[thm:guarantee](#thm:guarantee).
+
+The third line is from the Shannon's coding theorem.
+
+Notice that $A_1$ is a function of $X_1$, and thus we have
+
+$$
+
+$$
+\begin{aligned}
+
+H(X_1 | U_1) &= H(X_1, A_1 | U_1) \\
+&= H(X_1 | U_1, A_1) + H(A_1 | U_1) \\
+&\leq H(X_1 | U_1, A_1) + H(A_1) \\
+&= H(X_1 | U_1, A_1=1)p_{A_1}(1) \\
+&\quad + H(X_1 | U_1, A_1=0)p_{A_1}(0) + H(A_1) \\
+&= H(C_1 | U_1, A_1=1) p_{A_1}(1)\\
+&\quad + H(X_1 | U_1, A_1=0)p_{A_1}(0) + H(A_1) \\
+&\leq H(C_1 | U_1, A_1=1) p_{A_1}(1)\\
+&\quad + H(C_1 | U_1, A_1=0)p_{A_1}(0)\\
+&\quad + H(X_1 | U_1, A_1=0)p_{A_1}(0) + H(A_1) \\
+&= H(C_1 | U_1, A_1) \\
+&\quad + H(X_1 | U_1, A_1=0)p_{A_1}(0) + H(A_1) \\
+&\leq H(C_1 | U_1) \\
+&\quad + H(X_1 | U_1, A_1=0)p_{A_1}(0) + H(A_1)
+
+\end{aligned}
+$$
+
+\label{eq:x_bound}
+
+$$
+
+where the last but three line is given by Eq.~\eqref{eq:lossless_code}.
+
+Eqs.~\eqref{eq:bottleneck_bound} and \eqref{eq:x_bound} imply that
+
+$$
+
+$$
+\begin{aligned}
+
+I(C_1; U_1) &= H(C_1) - H(C_1 | U_1) \\
+& \leq 1 + T^{2/3} h_m \\
+&\quad + H(X_1 | U_1, A_1=0)p_{A_1}(0) + H(A_1)
+\label{eq:Hc_equality}
+
+\end{aligned}
+$$
+
+$$
+
+For any $t \leq T$, $X_1(t)$ is a discrete random variable with finite support cardinality, denoted as $K$.
+
+Then we have
+
+$$
+
+$$
+\begin{aligned}
+
+H(X_1 | U_1, A_1 = 0) &\leq \sum_{t=1}^T H(X_1(t) | U_1, A_1 = 0) \\
+& \leq T\log K
+
+\end{aligned}
+$$
+
+\label{x_ua_bound}
+
+$$
+
+On the other hand, notice that $\{X_1(t)\}$ is a stationary Markov process of order $\tau$.
+
+We have
+
+$$
+
+$$
+\begin{aligned}
+
+\log p_{X_1}(\cdot | U_1) &= \sum_{t=1}^\tau \log p_{X_1(t)}(\cdot | U_1, X_1(1 : t-1)) \\
+& + \sum_{t=\tau+1}^T \log p_{X_1(t)}(\cdot | U_1, X_1(t-\tau : t-1)) \\
+
+\end{aligned}
+$$
+
+$$
+
+From the central limit theorem for ergodic Markov process
+
+$$
+
+\lim_{T \rightarrow \infty}p_{A_1}(1) = 1, \quad \lim_{T \rightarrow \infty}p_{A_1}(0) = 0
+\label{eq:lln}
+
+$$
+
+Combining Eqs.~\eqref{eq:Hc_equality}, \eqref{x_ua_bound} and \eqref{eq:lln}, we have
+
+$$
+
+$$
+\begin{aligned}
+
+\frac{1}{T}
+
+I(C_1; U_1) &\leq \frac{1}{T} (1 + T^{2/3} h_m + p_{A_1}(0)T\log K  + H(A_1)) \\
+&\rightarrow 0, \mbox{ as }
+
+T \rightarrow \infty
+
+\end{aligned}
+$$
+
+$$
+
+Hence Eq.~\eqref{eq:lemma2} is proved.
+
+Next, for $X_1 \in \mathcal{X}$, notice that $[C_1, S_1]$ is a lossless code of $[X_1, U_1]$, because
+
+$$
+
+$$
+\begin{aligned}
+
+H(X_1, U_1) &= H(U_1) + H(X_1 | U_1) \\
+&= H(U_1) + H(C_1 | U_1) \\
+&= H(S_1) + H(C_1 | S_1) \\
+&= H(C_1, S_1)
+
+\end{aligned}
+$$
+
+\label{eq:lossless_code2}
+
+$$
+
+where the second line is from Eq~\eqref{eq:lossless_code}; the third line is from Lem.~[lem:one-to-one](#lem:one-to-one).
+
+Eq.~\eqref{eq:lossless_code2} implies that $[U_1, X_1]$ is fully recoverable from $[C_1, S_1]$.
+
+Therefore, there exists an optimum decoder $D^*(\cdot, \cdot)$ such that
+
+$$
+
+\hat{X}_{1 \rightarrow 1} = X_1
+\label{eq:equal_x}
+
+$$
+
+Combining Eqs.~\eqref{eq:lln} and \eqref{eq:equal_x}, Eq.~\eqref{eq:lemma1} is proved.
+
+Apply $E_c(\cdot)$ to both sides, we get
+
+$$
+
+\plim_{T \rightarrow \infty}
+
+E_c(\hat{X}_{1 \rightarrow 1}) = E_c(X_1) = C_1
+
+$$
+
+Hence, considering $X_1$ has finite second moment, convergence with probability implies mean squared convergence, \emph{i.e.}
+
+$$
+
+\lim_{T \rightarrow \infty} \mathbb{E} [\lVert \hat{X}_{1\rightarrow1} - X_1)^2 \rVert_2^2] + \lambda \mathbb{E} [\lVert E_c(\hat{X}_{1\rightarrow1}) - C_1 \rVert_1]= 0
+\label{eq:perfect_loss}
+
+$$
+
+which means that $[E^*_c(\cdot), D^*(\cdot, \cdot)]$ is the asymptotic global optimizer of Eq.~\eqref{eq:loss}.
+\end{proof}
+
+Now we are ready to prove Thm~[thm:guarantee](#thm:guarantee).
+
+\begin{proof} (Thm.~[thm:guarantee](#thm:guarantee))
+Denote $X'_2$ as speech drawn from the ground truth distribution of the converted speech, \emph{i.e.} $p_X(\cdot | U = U_2, Z = Z_1)$.
+
+Then our goal is to show that $\hat{X}_{1 \rightarrow 2}$ is assymptotically identically distributed to $X'_2$.
+
+What we will do is bridge the two random variables by passing $X'_2$ to \algname for self-reconstruction.
+
+Namely,
+
+$$
+
+C'_2 = E^*_c(X'_2), \mbox{ and } \hat{X}'_{2\rightarrow2} = D^*(C'_2, S_2)
+
+$$
+
+where $E^*(\cdot)$ and $D(\cdot)$ are the optimal encoder and decoder derived in Lem.~[lem:independence](#lem:independence).
+
+From Lem.~[lem:independence](#lem:independence), we know that $\hat{X}'_{2\rightarrow2} \rightarrow X'_2$ with probability.
+
+So all is left to do is to show that $\hat{X}'_{2\rightarrow2}$ is assymptotically identically distributed to $\hat{X}_{1\rightarrow2}$.
+
+First, notice that
+
+$$
+
+$$
+\begin{aligned}
+
+p_{C_1}(\cdot | z_1, u_2) &= p_{C_1}(\cdot | z_1) \\
+&= p_{E_c(X_1)}(\cdot | z_1) \\
+&= p_{E_c(X)}(\cdot | Z = z_1)
+
+\end{aligned}
+$$
+
+\label{eq:c_id1}
+
+$$
+
+where the first line is due to the fact that $C_1$ and $Z_1$ are both independent of $U_2$ (Recall $U_2$ is not involved in the generation process of $C_1$); the last line is from the fact that $(U_1, Z_1, X_1)$ is identically distributed to $(U, Z, X)$.
+
+Therefore, we can show that
+
+$$
+
+$$
+\begin{aligned}
+
+&\lim_{T\rightarrow \infty} \frac{1}{T}
+
+KL(p_{C'_2}(\cdot | z_1, u_2) || p_{E_c(X)}(\cdot | Z = z_1)) \\
+=&\lim_{T\rightarrow \infty} \frac{1}{T}
+
+KL(p_{C'_2}(\cdot | z_1, u_2) || p_{C_1}(\cdot | Z = z_1)) \\
+=& 0
+\label{eq:c_id2}
+
+\end{aligned}
+$$
+
+$$
+
+where the last line is given by Eq.~\eqref{eq:lemma2} of Lem.~[lem:independence](#lem:independence).
+
+On the other hand,
+
+$$
+
+$$
+\begin{aligned}
+
+p_{\hat{X}_{1\rightarrow2}}(\cdot | z_1, u_2) = p_{D^*(C_1, S_2)} ( \cdot | z_1, u_2) \\
+p_{\hat{X}'_{2\rightarrow2}}(\cdot | z_1, u_2) = p_{D^*(C'_2, S_2)} ( \cdot | z_1, u_2)
+
+\end{aligned}
+$$
+
+\label{eq:ideal_decomp}
+
+$$
+
+Combining Eqs.~\eqref{eq:c_id2} and \eqref{eq:ideal_decomp}, we have
+
+$$
+
+\lim_{T \rightarrow \infty} \frac{1}{T}
+
+KL(p_{\hat{X}_{1\rightarrow2}}(\cdot | z_1, u_2) || p_{\hat{X}'_{2\rightarrow2}}(\cdot | z_1, u_2)) = 0
+
+$$
+
+\end{proof}
+
+Here is a final note on Thm~[thm:guarantee](#thm:guarantee).
+
+The content loss can help to constrain information capacity of the bottleneck by soft-constraining the range of each dimension of the content code, otherwise the information capacity of each bottleneck dimension can be unbounded and Thm~[thm:guarantee](#thm:guarantee) does not apply.%}
+
+\end{document}
+
